--- a/driver-info.html
+++ b/driver-info.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>Driver Info</title><link rel='stylesheet' href='styles.css'></head><body><h2>Driver Information</h2><a href='trip-ongoing.html'>Start Trip</a></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Driver</title>
+<link rel='stylesheet' href='styles.css'>
+</head>
+<body>
+<div class='screen'>
+    <div class='section-title'>Select Driver</div>
+
+    <div class='card'>Driver 1 — Myvi</div>
+    <div class='card'>Driver 2 — Honda City</div>
+
+    <a class='btn' href='trip-ongoing.html'>Confirm Driver</a>
+</div>
+</body>
+</html>
