--- a/login.html
+++ b/login.html
@@ -1,1 +1,21 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>Login</title><link rel='stylesheet' href='styles.css'></head><body><h2>Login</h2><a href='home.html'>Proceed</a></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Login</title>
+<link rel='stylesheet' href='styles.css'>
+</head>
+<body>
+<div class='screen'>
+
+    <div class='logo'>SheSheG</div>
+    <div class='subtitle'>Rides by Women, For Women</div>
+
+    <input class='input' placeholder='Email / Phone Number'>
+    <input class='input' placeholder='Password' type='password'>
+
+    <a class='btn' href='home.html'>Log In</a>
+    <a class='link' href='#'>Forgot Password?</a>
+</div>
+</body>
+</html>
