--- a/payment.html
+++ b/payment.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>Payment</title><link rel='stylesheet' href='styles.css'></head><body><h2>Payment</h2><a href='rating.html'>Rate Driver</a></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Payment</title>
+<link rel='stylesheet' href='styles.css'>
+</head>
+<body>
+<div class='screen'>
+    <div class='section-title'>Payment</div>
+
+    <div class='card'>Your Fare: RM 40</div>
+    <a class='btn' href='rating.html'>Proceed to Rating</a>
+</div>
+</body>
+</html>
