--- a/rating.html
+++ b/rating.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>Rating</title><link rel='stylesheet' href='styles.css'></head><body><h2>Rate Your Ride</h2></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Rating</title>
+<link rel='stylesheet' href='styles.css'>
+</head>
+<body>
+<div class='screen'>
+    <div class='section-title'>Rate Your Ride</div>
+
+    <div class='card'>How was your driver?</div>
+    <a class='btn' href='index.html'>Submit</a>
+</div>
+</body>
+</html>
