--- a/ride-options.html
+++ b/ride-options.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>Ride Options</title><link rel='stylesheet' href='styles.css'></head><body><h2>Select Your Ride</h2><a href='driver-info.html'>Choose Driver</a></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Ride Options</title>
+<link rel='stylesheet' href='styles.css'>
+</head>
+<body>
+<div class='screen'>
+    <div class='section-title'>Select Your Ride</div>
+
+    <div class='card'>Bronze • Max 4 Passengers</div>
+    <div class='card'>Gold • Max 6 Passengers</div>
+    <div class='card'>Titanium • Max 4 Passengers</div>
+
+    <a class='btn' href='driver-info.html'>Choose Driver</a>
+</div>
+</body>
+</html>
