--- a/signup.html
+++ b/signup.html
@@ -1,1 +1,20 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>Sign Up</title><link rel='stylesheet' href='styles.css'></head><body><h2>Sign Up</h2></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Sign Up</title>
+<link rel='stylesheet' href='styles.css'>
+</head>
+<body>
+<div class='screen'>
+    <div class='section-title'>Create Account</div>
+
+    <input class='input' placeholder='Full Name'>
+    <input class='input' placeholder='Email / Phone'>
+    <input class='input' placeholder='Password' type='password'>
+    <input class='input' placeholder='Confirm Password' type='password'>
+
+    <a class='btn' href='home.html'>Sign Up</a>
+</div>
+</body>
+</html>
