--- a/trip-ongoing.html
+++ b/trip-ongoing.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>Trip Ongoing</title><link rel='stylesheet' href='styles.css'></head><body><h2>Trip Ongoing</h2><a href='payment.html'>End Trip</a></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Trip Ongoing</title>
+<link rel='stylesheet' href='styles.css'>
+</head>
+<body>
+<div class='screen'>
+    <div class='section-title'>Trip Ongoing...</div>
+
+    <p>Your trip is being monitored.</p>
+
+    <a class='btn' href='payment.html'>End Trip</a>
+</div>
+</body>
+</html>
