--- a/home.html
+++ b/home.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>Home</title><link rel='stylesheet' href='styles.css'></head><body><h2>Home</h2><a href='ride-options.html'>Select Ride</a></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Home</title>
+<link rel='stylesheet' href='styles.css'>
+</head>
+<body>
+<div class='screen'>
+    <div class='section-title'>Search Location</div>
+
+    <input class='input' placeholder='Enter your location...'>
+    <a class='btn' href='ride-options.html'>Select Ride</a>
+</div>
+</body>
+</html>
