--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>SheGO - Home</title><link rel='stylesheet' href='styles.css'></head><body><h1>SheGO Prototype</h1><a href='login.html'>Go to Login</a></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>SheGO - Welcome</title>
+<link rel='stylesheet' href='styles.css'>
+</head>
+<body>
+<div class='screen'>
+    <div class='logo'>SheSheG</div>
+    <div class='subtitle'>Rides by Women, For Women</div>
+
+    <a class='btn' href='login.html'>Login</a>
+    <a class='btn-secondary btn' href='signup.html'>Sign Up</a>
+</div>
+</body>
+</html>
