--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <body>
 
     <div class="screen">
+        
         <img src="logo-shego.png" class="logo-img" alt="SheGO Logo">
         
         <div class="subtitle">Rides by Women, For Women</div>
 
-        <p class="promo-text">New to SheGO? Enjoy 50% off on your first trip!</p>
+        <p class="promo-text">New to SheGO? Enjoy 50% off on your first ride-hailing trips!</p>
 
         <div class="input-group">
              <span class="country-code">+60</span>
@@ -40,6 +41,7 @@
         <div class="footer-link">
             Don't have an account? <a href="signup.html">SIGN UP</a>
         </div>
+
     </div>
 
 </body>
