--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div class="screen">
+    <div class="phone-screen">
         
         <img src="logo-shego.png" class="logo-img" alt="SheGO Logo">
         
